3.3
	+ Set version to 3.3
3.2
	+ Set version to 3.2
3.1.2
	+ Override daemons when migrating from 3.0
3.1.1
	+ Remove FirewallObserver inheritance as it is not used
	+ Added menu icon
	+ Updated to use the new security group concept.
3.1
	+ Added Pre-Depends on mysql-server to avoid problems with upgrades
	+ Depend on zentyal-core 3.1
3.0.2
	+ Adapted to changes in EBox::LogHelper::_convertTimestamp
3.0.1
	+ Fixed log helper after migration to MySQL
	+ Added and used serviceId field for service certificates
2.3.4
	+ Adapted group membership checking to changes in users
2.3.3
	+ Adapted to new Model management framework
2.3.2
	+ Create tables with MyISAM engine by default
2.3.1
	+ Adapted to new users implementation
2.3
	+ Fixed random_file in eap.conf to work in precise
	+ Adapted to new MySQL logs backend
	+ Replaced autotools with zbuildtools
2.1.1
	+ Add logHelper support.
2.1
	+ Use new standard enable-module script
	+ Replace add service migration with initialSetup
1.5.3
	+ Zentyal rebrand
	+ Bugfix: update configuration syntax to new FreeRADIUS version
1.5.2
	+ Adds integration with ebox-ca
	+ Bugfix: don't use bootstrap certificate generation as breaks
	  snakeoil certificates
1.5.1
	+ Disabled certificate creation until conflict with pgsql is solved
1.5
	+ Updated config files for lucid
1.3.13
	+ Bugfix: usersandgroups should be enabled for ebox-radius
1.3.10
	+ First release