@@ -1,3 +1,5 @@
+HEAD
+	+ Add mschap configuration
 3.3
 	+ Set version to 3.3
 3.2
